Small changes and a fix to the modal appearing below the search field and text
Cleaned up old css file, added login.jsp (but not functionality yet),
removed z-index in css so the modal would appear above the search field
and text, updated template file lazypaleobaker.html, moved modal below
header info.

--- a/src/main/webapp/resources/css/lpb.css
+++ b/src/main/webapp/resources/css/lpb.css
@@ -105,7 +105,7 @@ border: 1px solid;
   margin-right: auto;
   margin-left: auto;
   position: relative;
-  z-index: 400;
+
 }
 .results{
   border-radius: 4px;
